--- a/app/views/header.pug
+++ b/app/views/header.pug
@@ -1,3 +1,4 @@
 section#header
   .container
-    h1 THREE_X_PERIMENTS
+    h1 † Ħ Я ☰ ☰ ___ Ж ___₱ ☰ Я ï ∇∇ ☰ ∩ † $ 
+    div.subquote Here you can see all our experiments
