--- a/app/styles/base/_helpers.scss
+++ b/app/styles/base/_helpers.scss
@@ -25,6 +25,14 @@
   padding-right: 20px; /* 3 */
   width: 100%; /* 1 */
  }
+.container-fluid {
+  margin-left: auto; /* 2 */
+  margin-right: auto; /* 2 */
+  padding-left: 20px; /* 3 */
+  padding-right: 20px; /* 3 */
+  width: 100%; /* 1 */
+  
+}
 
 /**
  * Hide text while making it readable for screen readers
