--- a/app/styles/pages/_home.scss
+++ b/app/styles/pages/_home.scss
@@ -5,4 +5,8 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   transition: all 200ms ease;
+  display: flex;
+  min-height: 100vh;
+  justify-content: space-between;
+  flex-direction: column;
 }
