--- a/app/views/footer.pug
+++ b/app/views/footer.pug
@@ -1,3 +1,3 @@
 section#footer
   .container
-    div This is the footer
+    div Created by <a href="https://github.com/mmmaxou">mmmaxou</a> and <a href="https://github.com/GuillaumeDUT">Draelnir</a>
