--- a/app/views/firstProject.pug
+++ b/app/views/firstProject.pug
@@ -1,5 +1,11 @@
 extends layouts/default
 
 block content
-  div Hey there
+  include header
+  +header("F I R S T \\ \\ P R O J E C T", "We should really start somewhere.")
+  
+  #canvas
 
+
+  // Scripts
+  script(type="text/javascript", src='scripts/first.js')
