--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -1,5 +1,8 @@
 extends layouts/default
 
 block content
+  // ========= HEADER ==========
+  include ./header
+  +header("† Ħ Я ☰ ☰ ___ Ж ___₱ ☰ Я ï ∇∇ ☰ ∩ † $", "Here you can see all our experiments")
+
   include includes/homepage-grid
- 
