--- a/app/styles/pages/_home.scss
+++ b/app/styles/pages/_home.scss
@@ -8,5 +8,6 @@ body {
   display: flex;
   min-height: 100vh;
   justify-content: space-between;
+  align-items: center;
   flex-direction: column;
 }
