--- a/app/views/secondProject.pug
+++ b/app/views/secondProject.pug
@@ -4,8 +4,12 @@ extends layouts/default
 
 block content
   include header
-  +header("S E C O N D \\ \\ P R O J E C T", "Sa race la pute")
-  .title=data
+  +header("S E C O N D azdzadza P R O J E C T", "Sa race la pute")
+	#canvas
+
+
+  // Scripts
+  script(type="text/javascript", src='scripts/second.js')
 	
   
 	
