--- a/app/views/includes/homepage-grid.pug
+++ b/app/views/includes/homepage-grid.pug
@@ -4,7 +4,7 @@ section#homepage-grid
       a(href="firstProject.html").item
         .title F I R S T \ \ P R O J E C T
         .preview
-      a(href="secondProject.html").item
+      a(href="guigou.html").item
         .title S E C O N D \ \ P R O J E C T 
         .preview
       .item
