--- a/app/views/includes/homepage-grid.pug
+++ b/app/views/includes/homepage-grid.pug
@@ -1,8 +1,10 @@
+- var data = "F I R S T \ \ P R O J E C T"
+
 section#homepage-grid
   .container-fluid
     .grid
       a(href="firstProject.html").item
-        .title F I R S T \ \ P R O J E C T
+        .title= data
         .preview
       .item
       .item
