--- a/app/layouts/default.pug
+++ b/app/layouts/default.pug
@@ -55,6 +55,7 @@ html.no-js(lang='en-US')
 
     // MY OWN LIBS
     script(type="text/javascript", src="static/three/three.min.js")
+    script(type="text/javascript", src="static/three/three-orbit-controls.js")
 
 
     // build:js scripts/main.js
