--- a/app/styles/layout/_header.scss
+++ b/app/styles/layout/_header.scss
@@ -4,4 +4,10 @@
   h1 {
     margin-bottom: 0px;
   }
+  .return {
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    text-decoration: underline;
+  }
 }
