--- a/app/views/header.pug
+++ b/app/views/header.pug
@@ -1,6 +1,7 @@
 mixin header(title, subquote)
   section#header
     .container
+      .return: a(href="/") Home
       if title
         h1= title 
       if subquote
