--- a/app/views/includes/homepage-grid.pug
+++ b/app/views/includes/homepage-grid.pug
@@ -1,17 +1,19 @@
-- var data = "F I R S T \ \ P R O J E C T"
-
 section#homepage-grid
   .container-fluid
     .grid
       a(href="firstProject.html").item
-        .title= data
-        .preview
+        .title F I R S T \ \ P R O J E C T
+        .preview: img(src="images/first.png")
       a(href="guigou.html").item
         .title S E C O N D \ \ P R O J E C T 
         .preview
+      a(href="tutoAlsacreation.html").item
+        .title Alscacreation tutorial
+        .preview: img(src="images/alsacreation.png")
       .item
       .item
       .item
       .item
-      .item
+      
+script(src="scripts/homepage.js")
     
