--- a/app/styles/layout/_homepage-grid.scss
+++ b/app/styles/layout/_homepage-grid.scss
@@ -16,6 +16,7 @@
         flex-grow: 1;
         background-image: url(https://picsum.photos/200/300);
         background-size: cover;
+        background-position: center;
         
       }
       .title {
