--- a/app/views/layouts/default.pug
+++ b/app/views/layouts/default.pug
@@ -55,10 +55,10 @@ html.no-js(lang='en-US')
 
     // MY OWN LIBS
     script(type="text/javascript", src="static/three/three.min.js")
+    script(type="text/javascript", src="static/three/three-orbit-controls.js")
 
 
     // build:js scripts/main.js
-    script(type="text/javascript", src='scripts/main.js')
     // endbuild
     block content
 
