test de physiquuuuue

--- a/app/views/includes/homepage-grid.pug
+++ b/app/views/includes/homepage-grid.pug
@@ -10,6 +10,9 @@ section#homepage-grid
       a(href="tutoAlsacreation.html").item
         .title Alscacreation tutorial
         .preview: img(src="images/alsacreation.png")
+      a(href="physics.html").item
+        .title Physics Experiment
+        .preview: img(src="images/physics.png")
       .item
       .item
       .item
