--- a/app/views/includes/homepage-grid.pug
+++ b/app/views/includes/homepage-grid.pug
@@ -13,6 +13,9 @@ section#homepage-grid
       a(href="physics.html").item
         .title Physics Experiment
         .preview: img(src="images/physics.png")
+      a(href="surprise.html").item
+        .title Surprise
+        .preview
       .item
       .item
       .item
