added front page picture

--- a/app/views/includes/homepage-grid.pug
+++ b/app/views/includes/homepage-grid.pug
@@ -15,7 +15,7 @@ section#homepage-grid
         .preview: img(src="images/physics.png")
       a(href="surprise.html").item
         .title Surprise
-        .preview
+        .preview: img(src="images/surprise.png")
       .item
       .item
       .item
