--- a/app/views/guigou.pug
+++ b/app/views/guigou.pug
@@ -1,9 +1,7 @@
-extends layouts/default
+extends layouts/withoutFooter
 
 
 block content
-	include header
-	+header("S E C O N D azdzadza P R O J E C T","Sa race la pute")
 	
 	#canvas
 
