--- a/app/views/includes/homepage-grid.pug
+++ b/app/views/includes/homepage-grid.pug
@@ -16,6 +16,9 @@ section#homepage-grid
       a(href="surprise.html").item
         .title Surprise
         .preview: img(src="images/surprise.png")
+      a(href="little-game.html").item
+        .title Little Game
+        .preview: img(src="images/little-game.png")
       .item
       .item
       .item
